# JediKnightPlus

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
assets/: CMakeLists.txt
assets/gfx/hud/keys/: jump_off_autokick.tga  jump_on_autokick.tga
assets/jk2mv/: CMakeLists.txt
assets/jk2pro/: CMakeLists.txt
assets/jk2pro/models/players/galak/: sounds.cfg
assets/jk2pro/models/players/luke/: sounds.cfg
assets/jk2pro/models/players/ugnaught/: sounds.cfg
assets/jk2pro/models/players/weequay/: sounds.cfg
assets/jk2pro/strip/: menus_jka.sp
assets/jk2pro/ui/: jk2mpingame.txt
assets/jk2pro/ui/jk2mp/: controls.menu  credits.menu  ingame.menu  ingame_callvote.menu  ingame_camera.menu  ingame_character_colors.menu  ingame_player.menu  ingame_player2.menu  ingame_saber.menu  main.menu  menudef.h  multiplayer.menu  rules.menu  rules_force.menu  rules_items.menu  rules_weapons.menu  setup.menu
assets/models/players/desann/: sounds.cfg
assets/models/players/jeditrainer/: sounds.cfg
assets/models/players/kyle/: sounds.cfg
assets/models/players/lando/: sounds.cfg
assets/models/players/morgan/: sounds.cfg
assets/ui/: jk2mpingame.txt
assets/ui/jk2mp/: createserver.menu  demo.menu  ingame.menu  ingame_callvote.menu  ingame_camera.menu  ingame_controls.menu  ingame_player.menu  ingame_player2.menu  ingame_playerforce.menu  ingame_saber.menu  ingame_server.menu  ingame_setup.menu  joinserver.menu  quit.menu  rules_games.menu  setup.menu
libs/jpeg/: CMakeLists.txt
libs/jpeg-9e/: CMakeLists.txt
libs/minizip/: CMakeLists.txt
libs/zlib/: CMakeLists.txt  gzguts.h
src/: CMakeLists.txt
src/api/: mvapi.h
src/botlib/: l_script.cpp  l_struct.cpp  l_struct.h
src/cgame/: cg_local.h  cg_public.h  tr_types.h
src/client/: FXExport.cpp  cl_cgame.cpp  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  cl_scrn.cpp  cl_tc_vis.cpp  cl_ui.cpp  client.h  snd_dma.cpp  snd_mp3.cpp
src/game/: bg_public.h
src/ghoul2/: G2_API.cpp  G2_local.h  G2_surfaces.cpp
src/menu/: ui_public.h
src/qcommon/: cm_shader.cpp  cmd.cpp  common.cpp  cvar.cpp  files.cpp  q_shared.cpp  q_shared.h  qcommon.h  strip.cpp  strip.h  tags.h  vm.cpp
src/renderer/: tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_font.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_public.h  tr_scene.cpp  tr_shade.cpp  tr_shader.cpp
src/sdl/: sdl_input.cpp  sdl_window.cpp
src/server/: sv_game.cpp  sv_init.cpp
src/sys/: con_win32.cpp  sys_main.cpp  sys_public.h  sys_unix.cpp  sys_win32.cpp
